# PEITS

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  Dockerfile  INSTALL  INSTALL.md  INSTALL.sh  INSTRUCTIONS.txt  Makefile.am  README  README.md  config.h.cmake  config.opts  config.opts_example  configure.ac  docker-compose.yml  dune-peits.pc.in  dune.module  matlab_c_call.sh
.ci/: install_petsc.sh  install_zoltan.sh  setup_travis.sh
cmake/modules/: CMakeLists.txt
data/: TA052_meters.dgf  TA052positions_meters.txt  conductivities  current_protocol.txt  current_protocol_TA052.txt  electrode_diameters_TA052.txt  electrode_nodes_TA052_meters  param_TA052_meters  param_unitcube-3d  parameter  parameter_example.cfg  standardparams  surface_coordinates_TA052_precise  unitcube-3d.dgf
doc/: Makefile.am
doc/doxygen/: Doxyfile.in  Doxylocal
dune/: CMakeLists.txt  Makefile.am
dune/peits/: CMakeLists.txt  Makefile.am  peits.hh
m4/: Makefile.am  dune-peits.m4
matlab/: dune_exporter.m  electrodepositions.mat  jacobian_hexagoniser.m  load_electrode_voltages_binary.m  load_jacobian_binary.m  load_jacobian_binary_in_steps.m  load_sigma_vector_binary.m  run_forward_solver.m  save_sigma_vector_binary.m  set_forward_default_values.m  write_parameter_files.m
partitions/: TA052_meters.dgf.1_0.grid  TA052_meters.dgf.2_0  TA052_meters.dgf.2_0.grid  TA052_meters.dgf.2_1  TA052_meters.dgf.2_1.grid
python/: run_many_PEITS.py  scratch.py
resources/: TA052.mat
src/: CMakeLists.txt  Makefile.am  adaptation.hh  alugrid.cfg  datamap.hh  dirichletconstraints.hh  dune-peits.cc  dune_peits.cc  electrode_helpers.hh  elliptic.hh  femscheme.hh  loadbalance.hh  matlabhelpers.hh  model.hh  mpigdb.sh  old-dune-peits.cc  piecewisefunction.hh  poisson.hh  probleminterface.hh  rhs.hh  test-dune-peits.cc  zoltaninterface.hh
src/.deps/: dune_peits-dune_peits.Po
tests/: initial_test.sh  matlab_tests.m  nn_test.sh
